--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,6 +21,7 @@
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
+    "shortid": "^2.2.17",
     "stripe": "^18.1.1",
     "validator": "^13.15.0"
   }
