--- a/backend/package.json
+++ b/backend/package.json
@@ -4,25 +4,28 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "body-parser": "^2.2.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.0",
-    "multer": "^2.0.0",
-    "nodemon": "^3.1.10",
-    "razorpay": "^2.9.6",
-    "shortid": "^2.2.17",
-    "stripe": "^18.1.1",
-    "validator": "^13.15.0"
+    "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.4",
+    "shortid": "^2.2.16",
+    "stripe": "^16.2.0",
+    "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
