--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "routes": [
     {
-      "src": "/frontend/dist/(.*)",
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
       "dest": "frontend/dist/$1"
     },
     {
