--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "Food-Zone/frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/Food-Zone/frontend/dist/(.*)",
-      "dest": "/Food-Zone/frontend/dist/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/Food-Zone/frontend/dist/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
