Add root package.json for Vercel build

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "Food-Zone/frontend/dist",
   "rewrites": [
     {
       "source": "/(.*)",
