--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,21 @@
 {
-  "buildCommand": "cd Food-Zone/frontend && npm install && npm run build && cp -r dist ../../dist",
-  "outputDirectory": "dist",
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "Food-Zone/frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
