--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_RAZORPAY_KEY=rzp_test_KbKCf8dIP10uNs
-# VITE_BACKEND_URL=https://food-zone-ib5i.onrender.com
+VITE_BACKEND_URL=https://food-zone-ib5i.onrender.com
 
-VITE_BACKEND_URL=http://localhost:4000
+# VITE_BACKEND_URL=http://localhost:4000
